# DICOM-Image-Viewer

./: .dockcerignore  .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  app.py  basic_app.py  development.db  entrypoint.sh  pyproject.toml  run.py
backend/app/: __init__.py
backend/dicom_utils/: __init__.py
backend/uploads/: 01250946-5377-40ff-845b-5d70484e3c51_1.2.276.0.26.1.1.1.2.2023.312.46960.6389189.92012544.dcm  1.2.276.0.26.1.1.1.2.2023.312.46659.8146916.92012544.dcm  10ed86e7-e6eb-4e8a-83fb-771aab23cc53_1.2.276.0.26.1.1.1.2.2023.311.45073.6248052.92012544.dcm  1636f6a7-a053-4696-b428-2b5409bf618c_1.2.276.0.26.1.1.1.2.2023.312.47020.7526222.92012544.dcm  165a6175-904f-4341-b606-d546a10b3ed6_1.2.276.0.26.1.1.1.2.2023.311.38211.7322807.92012544.dcm  1771e735-6a2a-48ec-9ae1-2e7d5047fa62_1.2.276.0.26.1.1.1.2.2023.311.45046.1703541.92012544.dcm  1e68c28a-516f-4e2b-ad1a-99342b604128_1.2.276.0.26.1.1.1.2.2023.311.45512.6585807.92012544.dcm  26ad2d5e-3515-4bcd-9eef-036fa47fed9d_1.2.276.0.26.1.1.1.2.2023.311.45426.7256907.92012544.dcm  2dc093d1-f21c-4906-acbb-187c52296b42_1.2.276.0.26.1.1.1.2.2023.311.38032.589109.92012544.dcm  36b1b6fd-5928-4ec7-85e3-4638c4e5379f_4e039b0e-f3b6-4c36-884a-7615d01a914d_1.2.276.0.26.1.1.1.2.2023.312.46767.6551545.92012544.dcm  36c3e193-013e-4147-be34-310f6e6d7431_1.2.276.0.26.1.1.1.2.2023.311.45634.2980537.92012544.dcm  39c1a3bc-2315-42ec-9378-2d35ba1ab11e_1.2.276.0.26.1.1.1.2.2023.311.45682.2247826.92012544.dcm  54489247-e4aa-4a56-9f55-807e183d10e4_1.2.276.0.26.1.1.1.2.2023.311.45232.2325490.92012544.dcm  (+27 more)
(+35 files in other folders)
